# mini_metrics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conda.yaml  metrics.py  mini_results.csv  pyproject.toml
.github/workflows/: ci.yml
dev/: global_metrics.ipynb
examples/: README.md  mini_results_trunc.csv  small.csv
examples/expected/: demo.csv  demo_trunc.csv  flemming_fastai_v1.csv  small.csv
mini_metrics/: .gitignore  __init__.py  abstract.py  data.py  data.pyi  demo.csv  helpers.py  math.py  metrics.py  mini_results.csv  plots.py  py.typed  register.py  simple.py
tests/: conftest.py  test_metrics.py
