[project]
name = "mini_metrics"
version = "0.0.3"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "tqdm>=4.67.3",
]
requires-python = ">=3.12"
authors = [
  {name = "Guillaume Mougeot", email = "guillaume.mougeot@laposte.net"},
  {name = "Asger Svenning", email = "asgersvenning@gmail.com"}
]
maintainers = [
  {name = "Guillaume Mougeot", email = "guillaume.mougeot@laposte.net"},
  {name = "Asger Svenning", email = "asgersvenning@gmail.com"}
]
description = "A minimal package for computing classification evaluation metrics"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["machine learning", "metrics", "evaluation", "classification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/GuillaumeMougeot/mini_metrics"
"Bug Tracker" = "https://github.com/GuillaumeMougeot/mini_metrics/issues"

[project.scripts]
mm_metrics = "mini_metrics.metrics:run"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable core checks, imports, pyupgrade, and pydocstyle
select = ["E", "F", "I", "UP", "D"]
# Prefer multi-line docstring summaries (D213); ignore D200 (summary must be on first line)
ignore = [
    "D200",   # summary must be on first line (conflicts with multi-line D213)
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D212",   # multi-line docstring summary should start at first line (conflicts with D213)
    "D417",   # missing argument description in docstring
    "UP047",  # use type parameters (PEP 695) instead of TypeVar/ParamSpec
    "E501",   # line too long (handled by formatting or editor wrapping)
    "D205",   # 1 blank line required between summary line and description
    "E731",   # do not assign a lambda expression, use a def
    "D415",   # first line should end with a period, question mark, or exclamation point
]
preview = true

[tool.ruff.lint.per-file-ignores]
# Apply these ignores ONLY to the tests directory
"tests/**/*.py" = [
    "S101",     # flake8-bandit: Use of `assert` detected (Pytest relies on this!)
    "PLR2004",  # pylint: Magic value used in comparison (Tests are full of hardcoded values)
    "D",        # pydocstyle: Missing docstrings (Test names should be descriptive enough)
    "ANN",      # flake8-annotations: Missing type annotations (Overkill for test files)
    "SLF001",   # flake8-self: Private member accessed (Often needed to test internal state)
    "ARG",      # flake8-unused-arguments: Unused function args (Common with fixtures and mocks)
    "FBT",      # flake8-boolean-trap: Boolean positional arg (Common in parametrized tests)
    "S105",     # flake8-bandit: Hardcoded password (Dummy credentials are fine in tests)
    "S106",     # flake8-bandit: Hardcoded password in func call
    "PLR0915",  # pylint: Too many statements (Test functions naturally get a bit long)
    "PLR0913",  # pylint: Too many arguments (Fixtures can pile up quickly)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.docformatter]
# Place opening quotes on their own line and summary on the next line
make-summary-multi-line = true
pre-summary-newline = true
# Leave lines unwrapped; let editors/linters handle wrapping
wrap-summaries = 0
wrap-descriptions = 0

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

